--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,12 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
     </section>
+    <nav class="main-nav">
+      <ul>
+        <li><a href="/">Introduction</a></li>
+        <li><a href="/">EDA</a></li>
+      </ul>
+    </nav>
     <section class="main-content">
       {{ content }}
 
