--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,16 +12,17 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
+      <h2 class="project-tagline">{{ site.description}}</h2>
     </section>
+
+    <section class="main-content">
     <nav class="main-nav">
       <ul>
         <li><a href="/">Introduction</a></li>
         <li><a href="/">EDA</a></li>
       </ul>
     </nav>
-    <section class="main-content">
       {{ content }}
-
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
