--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,12 +12,11 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ site.description}}</h2>
+      <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
     </section>
-
     <section class="main-content">
     <nav class="main-nav">
-      <ul>
+      <ul style="list-style: none;">
         <li><a href="/">Introduction</a></li>
         <li><a href="/">EDA</a></li>
       </ul>
