--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     <section class="main-content">
     <nav class="main-nav">
       <ul style="list-style: none;">
-        <li><a href="/">Introduction</a></li>
-        <li><a href="/">EDA</a></li>
+        <li style="list-style: none;"><a href="/">Introduction</a></li>
+        <li style="list-style: none;"><a href="/">EDA</a></li>
       </ul>
     </nav>
       {{ content }}
