--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <section class="main-content">
     <nav class="main-nav">
       <ul style="list-style: none;">
-        <li style="list-style: none;"><a href="/">Introduction</a></li>
+        <li style="list-style: none;"><a id = "welcome-to-github-pages">Introduction</a></li>
         <li style="list-style: none;"><a href="/">EDA</a></li>
       </ul>
     </nav>
