--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,8 @@
     <section class="main-content">
     <nav class="main-nav">
       <ul style="list-style: none;">
-        <li style="list-style: none;"><a id = "welcome-to-github-pages">Introduction</a></li>
-        <li style="list-style: none;"><a href="/">EDA</a></li>
+        <li style="list-style: none;"><a href = "#welcome-to-github-pages">Introduction</a></li>
+        <li style="list-style: none;"><a href="#markdown">EDA</a></li>
       </ul>
     </nav>
       {{ content }}
