--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,39 +8,6 @@
     <meta name="theme-color" content="#157878">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
-    <style>
-        body {
-            margin: 0;
-        }
-
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            width: 25%;
-            background-color: #f1f1f1;
-            position: fixed;
-            height: 100%;
-            overflow: auto;
-        }
-
-        li a {
-            display: block;
-            color: #000;
-            padding: 8px 16px;
-            text-decoration: none;
-        }
-
-        li a.active {
-            background-color: #4CAF50;
-            color: white;
-        }
-
-        li a:hover:not(.active) {
-            background-color: #555;
-            color: white;
-        }
-</style>
   </head>
   <body>
     <section class="page-header">
@@ -49,7 +16,7 @@
     </section>
     <section class="main-content">
     <nav class="main-nav">
-      <ul style="list-style: none;">
+      <ul style="list-style-type: none;width: 25%;position: fixed;height: 100%;overflow: auto;">
         <li style="list-style: none;"><a href = "#welcome-to-github-pages">Introduction</a></li>
         <li style="list-style: none;"><a href="#markdown">EDA</a></li>
       </ul>
