--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     </section>
     <section class="main-content">
     <nav class="main-nav">
-      <ul style="list-style: none padding:0;">
+      <ul style="list-style: none; padding:0;">
         <li style="list-style: none; display: inline-block;"><a style = "padding: 14px 16px; href = "#welcome-to-github-pages">Introduction</a></li>
         <li style="list-style: none; display: inline-block;"><a style = "padding: 14px 16px;" href="#markdown">EDA</a></li>
       </ul>
